log
Wed, Mar 19, 2025  8:46:11 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:05:48 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:46:10: error: unused variable 'elemento' [-Werror=unused-variable]
    void* elemento = first(L);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6a56891
Wed, Mar 19, 2025  9:11:12 AM: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:9: error: 'num' undeclared (first use in this function)
       *(num) = k;
         ^~~
exercises.c:50:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
28868e1
Wed, Mar 19, 2025  9:12:29 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
b2802c2
Wed, Mar 19, 2025  9:20:54 AM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:17: error: implicit declaration of function 'gest_size' [-Werror=implicit-function-declaration]
    int tamano = gest_size(L);
                 ^~~~~~~~~
exercises.c:68:7: error: statement with no effect [-Werror=unused-value]
       suma
       ^~~~
exercises.c:69:4: error: expected ';' before '}' token
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
d5e3f35
Wed, Mar 19, 2025  9:22:23 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:7: error: invalid use of undefined type 'struct List'
       suma += (*L[k]);
       ^~~~
exercises.c:68:18: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += (*L[k]);
                  ^
Compilation failed
0f81b96
Wed, Mar 19, 2025  9:25:48 AM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:65:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento = first(L);
                   ^~~~~
exercises.c:69:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elemento = next(L);
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
b72acc6
Wed, Mar 19, 2025  9:31:22 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
3bb66a4
Wed, Mar 19, 2025  9:35:49 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:88:20: error: comparison between pointer and integer [-Werror]
       if (elemento == elem)
                    ^~
exercises.c:90:25: error: passing argument 2 of 'pushCurrent' makes pointer from integer without a cast [-Werror=int-conversion]
          pushCurrent(L, elem);
                         ^~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
64f0218
Wed, Mar 19, 2025  9:36:47 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:88:20: error: comparison between pointer and integer [-Werror]
       if (elemento == elem)
                    ^~
exercises.c:90:10: error: dereferencing 'void *' pointer [-Werror]
          *popCurrent(L);
          ^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dcf4c6b
Wed, Mar 19, 2025  9:37:34 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:90:10: error: dereferencing 'void *' pointer [-Werror]
          *popCurrent(L);
          ^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4a3e61c
Wed, Mar 19, 2025  9:37:55 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
81bf563
mi., 19 de mar. de 2025 22:18:18: 
 tests:  2|3
total_score: 20/70
5fc70be
mi., 19 de mar. de 2025 22:20:04: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:92:22: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else *elemento = next(L);
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
7a146e3
mi., 19 de mar. de 2025 22:22:27: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:92:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = next(L);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e8960ef
vi., 21 de mar. de 2025 16:38:53: 
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:92:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = next(L);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a87ece1
vi., 21 de mar. de 2025 16:40:26: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
55034ff
vi., 21 de mar. de 2025 17:49:04: 
 tests:  3|2
total_score: 40/70
d7b8a28
vi., 21 de mar. de 2025 17:50:59: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:105:11: error: unused variable 'sux' [-Werror=unused-variable]
    Stack* sux = create_list();
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
271e60e
vi., 21 de mar. de 2025 17:51:20: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:105:11: error: unused variable 'aux' [-Werror=unused-variable]
    Stack* aux = create_list();
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
34255e9
vi., 21 de mar. de 2025 17:54:26: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
90f9209
vi., 21 de mar. de 2025 18:18:48: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:126:9: error: unused variable 'dato' [-Werror=unused-variable]
    int* dato = 0;
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e638a4e
vi., 21 de mar. de 2025 18:19:05: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 60/70
49f1af0
vi., 21 de mar. de 2025 18:22:01: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
fe6047f
vi., 21 de mar. de 2025 18:22:33: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 60/70
f4bac4a
vi., 21 de mar. de 2025 18:34:33: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
774b801
vi., 21 de mar. de 2025 18:37:41: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
89dabd4
vi., 21 de mar. de 2025 18:39:01: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|1
total_score: 50/70
6bc50de
vi., 21 de mar. de 2025 18:40:03: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
acadc6b
vi., 21 de mar. de 2025 18:41:00: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e6c4495
vi., 21 de mar. de 2025 18:42:31: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|1
total_score: 60/70
6107e7e
vi., 21 de mar. de 2025 18:54:50: 
 exercises.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  9|0
total_score: 70/70
982bc7c
vi., 21 de mar. de 2025 18:56:45: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|0
total_score: 70/70
6585338
vi., 21 de mar. de 2025 22:56:17: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
923e162
vi., 21 de mar. de 2025 23:57:28: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
3a67e2d
sá., 22 de mar. de 2025 19:31:33: 
 tests:  9|0
total_score: 70/70
cb6d408
